# agent-insights

./: .dockerignore  .env.example  .gitignore  .snyk  AGENTS.md  CHANGELOG.md  CHANGELOG_HYBRID.md  CLAUDE.md  CRM_QA_TEST_REPORT.md  Caddyfile  DESIGN_SYSTEM.md  DEV.md  DEVLOG.md  Dockerfile  Dockerfile.base  Dockerfile.orig  INBOX.md  INSTALL_ENGINEER.md  LICENSE  NEWPIPE.md  README.md  ROADMAP.md  VERSION_HYBRID  dash-config.dev.yaml  dash-config.yaml  docker-compose.build.yaml  docker-compose.dev.yaml  docker-compose.nginx.yaml  docker-compose.npm.yaml  docker-compose.scale.yaml  docker-compose.yaml  mockup-autotrain-pipeline.html  mockup-bi-interactive.html  mockup-connector-help.html  mockup-dashboard-first-revamp.html  mockup-dashboard-first.html  mockup-dashboard-versions.html  mockup-design-system.html  mockup-fixes.html  mockup-issues2.html  (+32 more)
.claude/: MEMORY.md  settings.json
backend/: .gitignore  .snyk  AGENTS.md  dash-eval.py  main.py  repro_dup_schedule.py  requirements_versioned.txt
configs/: dash-config.dev.yaml  dash-config.google_oauth.yaml  dash-config.multiorg.dev.yaml  dash-config.sandbox.yaml
docs/: AGENT_PAGE_FIX_MOCKUP.html  ARCHITECTURE.html  AUTOPILOT_MOCK.html  AUTOTRAIN_BUILD_PLAN.md  AUTOTRAIN_FIX_PLAN.md  AUTOTRAIN_PHASE_TASKS.md  AUTOTRAIN_PROGRESS.md  AWS_PHASE0_RUNBOOK.md  CITYDASH_TRAINING_VS_CITYAGENT_PORT_PLAN.md  CODEBASE_MAP.md  DATA_AGENT_CLEANUP_PLAN.md  DEPLOY_PUBLIC.md  INFRA_SIZING.md  INGEST_TRAIN_PIPELINE.html  KPI_KINDS_TODO.md  MASTER_PLAN_DATA_AGENT.md  (+35 more)
tools/qvd2parquet/: Cargo.toml
tools/qvd2parquet/src/: main.rs
(+2351 files in other folders)
